plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.filmjalsa'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

def querydslVersion = '5.1.0'

sourceSets {
    main {
        java {
            srcDir layout.buildDirectory.dir("generated/sources/annotationProcessor/java/main")
        }
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.eclipse.angus:angus-mail'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    implementation 'commons-io:commons-io:2.16.1'

    implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'
    implementation 'com.google.api-client:google-api-client:2.4.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    implementation 'com.google.apis:google-api-services-gmail:v1-rev20240520-2.0.0'

    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml'

    runtimeOnly 'com.mysql:mysql-connector-j'

    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    annotationProcessor 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation group: 'org.apache.poi', name: 'poi', version: '5.3.0'
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.3.0'

    implementation 'com.auth0:java-jwt:4.4.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
    implementation group: 'org.json', name: 'json', version: '20240303'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // jsoup HTML parser library @ https://jsoup.org/
    implementation 'org.jsoup:jsoup:1.17.2'

    // https://mvnrepository.com/artifact/com.restfb/restfb
    implementation group: 'com.restfb', name: 'restfb', version: '2024.10.0'

    // https://mvnrepository.com/artifact/org.twitter4j/twitter4j-core
    implementation group: 'org.twitter4j', name: 'twitter4j-core', version: '4.1.2'

    implementation 'com.google.firebase:firebase-admin:9.3.0'

    implementation 'org.apache.pdfbox:pdfbox-tools:3.0.3'
    implementation 'net.sf.cssbox:pdf2dom:2.0.0'
    implementation 'com.itextpdf:itextpdf:5.5.13.4'
    implementation 'com.itextpdf.tool:xmlworker:5.5.13.4'
}
